--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
 
                 <!-- Game 9 -->
                 <div class="game-card" data-game="Prado Car Parking Game" data-category="Adventure Racing">
-                    <img src="https://tikmob.github.io/game/images/4.jpg" alt="Prado Car Parking Game" class="game-image">
+                    <img src="https://tikmob.github.io/game/images/2.jpg" alt="Prado Car Parking Game" class="game-image">
                     <div class="game-info">
                         <h3 class="game-title">Prado Car Parking Game</h3>
                         <p class="game-description">Experience the next level of luxury driving with Prado Car Parking Simulator. Step into a world where precision meets performance</p>
@@ -565,22 +565,22 @@
                 </div>
 
                 <!-- Game 11 -->
+                <div class="game-card" data-game="Super Mario Run" data-category="strategy">
+                    <img src="https://ug17.github.io/images/doge-miner.jpg" alt="Super Mario Run" class="game-image">
+                    <div class="game-info">
+                        <h3 class="game-title">Super Mario Run</h3>
+                        <p class="game-description">Join Mario and his friends in this free running and adventure game! Help rescue the princess as you run</p>
+                        <a href="https://tikmob.github.io/game/game.html?game=super-mario-run-game" class="play-btn">Play Now</a>
+                    </div>
+                </div>
+
+                <!-- Game 12 -->
                 <div class="game-card" data-game="paper-io" data-category="Adventure Racing">
                     <img src="https://tikmob.github.io/game/images/2.jpg" alt="Paper.io Game" class="game-image">
                     <div class="game-info">
                         <h3 class="game-title">Paper.io</h3>
                         <p class="game-description">Capture territory and defeat opponents in this competitive .io game.</p>
                         <a href="/play/paper-io" class="play-btn">Play Now</a>
-                    </div>
-                </div>
-
-                <!-- Game 12 -->
-                <div class="game-card" data-game="doge-miner" data-category="strategy">
-                    <img src="https://ug17.github.io/images/doge-miner.jpg" alt="Doge Miner Game" class="game-image">
-                    <div class="game-info">
-                        <h3 class="game-title">Doge Miner</h3>
-                        <p class="game-description">Mine dogecoins and become the ultimate crypto millionaire in this idle game.</p>
-                        <a href="/play/doge-miner" class="play-btn">Play Now</a>
                     </div>
                 </div>
             </div>
