--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
 
                 <!-- Game 11 -->
                 <div class="game-card" data-game="Super Mario Run" data-category="strategy">
-                    <img src="https://ug17.github.io/images/doge-miner.jpg" alt="Super Mario Run" class="game-image">
+                    <img src="https://tikmob.github.io/game/images/4.jpg" alt="Super Mario Run" class="game-image">
                     <div class="game-info">
                         <h3 class="game-title">Super Mario Run</h3>
                         <p class="game-description">Join Mario and his friends in this free running and adventure game! Help rescue the princess as you run</p>
