--- a/index.html
+++ b/index.html
@@ -539,8 +539,8 @@
                     <img src="https://tikmob.github.io/game/images/2.jpg" alt="Among Us Online" class="game-image">
                     <div class="game-info">
                         <h3 class="game-title">Among Us Online</h3>
-                        <p class="game-description">Welcome to game Among Us Online Edition - game based on Among Us</p>
-                        <a href="https://tikmob.github.io/game/game8.html" class="play-btn">Play Now</a>
+                        <p class="game-description">Welcome to Among Us Online Edition, a thrilling solo version inspired by the famous space sabotage game.</p>
+                        <a href="https://tikmob.github.io/game/game.html?game=among-us-online-edition" class="play-btn">Play Now</a>
                     </div>
                 </div>
 
