--- a/index.html
+++ b/index.html
@@ -513,12 +513,12 @@
                 </div>
 
                 <!-- Game 12 -->
-                <div class="game-card" data-game="paper-io" data-category="Adventure Racing">
-                    <img src="https://tikmob.github.io/game/images/2.jpg" alt="Paper.io Game" class="game-image">
+                <div class="game-card" data-game="worms-zone-a-slithery-snake" data-category="Arcade">
+                    <img src="https://tikmob.github.io/game/images/6.jpg" alt="Paper.io Game" class="game-image">
                     <div class="game-info">
                         <h3 class="game-title">Paper.io</h3>
-                        <p class="game-description">Capture territory and defeat opponents in this competitive .io game.</p>
-                        <a href="/play/paper-io" class="play-btn">Play Now</a>
+                        <p class="game-description">Enter the world of Worms Zone, a fun and fast-paced snake evolution game with a dynamic storyline. Start as a tiny worm and eat everything in your path to grow into a massive anaconda</p>
+                        <a href="https://tikmob.github.io/game/game.html?game=worms-zone-a-slithery-snake" class="play-btn">Play Now</a>
                     </div>
                 </div>
             </div>
