--- a/index.html
+++ b/index.html
@@ -521,6 +521,16 @@
                         <a href="https://tikmob.github.io/game/game.html?game=worms-zone-a-slithery-snake" class="play-btn">Play Now</a>
                     </div>
                 </div>
+
+                 <!-- Game 13 -->
+                <div class="game-card" data-game="geometry-dash-beatbox" data-category="Arcade">
+                    <img src="https://tikmob.github.io/game/images/7.jpg" alt="Geometry Dash BeatBox" class="game-image">
+                    <div class="game-info">
+                        <h3 class="game-title">Geometry Dash BeatBox</h3>
+                        <p class="game-description">Get ready for an adrenaline-pumping challenge in Geometry Dash, the ultimate rhythm-based action platform game!</p>
+                        <a href="https://tikmob.github.io/game/game.html?game=worms-zone-a-slithery-snake" class="play-btn">Play Now</a>
+                    </div>
+                </div>
             </div>
         </section>
 
