--- a/index.html
+++ b/index.html
@@ -531,6 +531,16 @@
                         <a href="https://tikmob.github.io/game/game.html?game=geometry-dash-beatbox" class="play-btn">Play Now</a>
                     </div>
                 </div>
+
+                <!-- Game 14 -->
+                <div class="game-card" data-game="getting-over-it-unblocked" data-category="Action Adventure">
+                    <img src="https://tikmob.github.io/game/images/8.jpg" alt="Getting Over It Unblocked" class="game-image">
+                    <div class="game-info">
+                        <h3 class="game-title">Getting Over It Unblocked</h3>
+                        <p class="game-description">Embark on the most challenging climbing adventure with Getting Over It Unblocked! Take control of a man trapped inside a pot</p>
+                        <a href="https://tikmob.github.io/game/game.html?game=getting-over-it-unblocked" class="play-btn">Play Now</a>
+                    </div>
+                </div>
             </div>
         </section>
 
