--- a/index.html
+++ b/index.html
@@ -706,7 +706,7 @@
         });
     </script>
     <script>
-  fetch('game.json')
+  fetch('games.json')
     .then(response => response.json())
     .then(data => {
       const container = document.getElementById('moreGamesGrid');
