--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
     <header>
         <div class="container">
             <div class="header-content">
-                <a href="/" class="logo">
+                <a href="https://tikmob.github.io/game/" class="logo">
                     <span class="logo-icon">🎮</span>
                     <span>FreePlayHub Games</span>
                 </a>
