--- a/index.html
+++ b/index.html
@@ -664,98 +664,70 @@
         script.text = JSON.stringify(structuredData);
         document.head.appendChild(script);
     </script>
-    <script>
-        // 1) نُحَكّم سلوك النقر داخل البطاقات بحيث:
-        //    - إذا نقر المستخدم على زر .play-btn: يتم الانتقال لِـ href الخاص به (الافتراضي).
-        //    - إذا نقر المستخدم في أي مكان آخر من البطاقة: نأخُذ href من زر .play-btn وننتقل إليه.
-        //    - هذا يمنع أي استخدام خاطئ لـ data-game أو روابط مختلفة.
-
-        document.addEventListener('DOMContentLoaded', function () {
-            document.querySelectorAll('.game-card').forEach(card => {
-                const playBtn = card.querySelector('a.play-btn');
-
-                // إذا لم يوجد زر لعب داخل البطاقة فلا نفعل شيئاً
-                if (!playBtn) return;
-
-                // منع أي متصرف افتراضي سابق (إذا كان هناك مستمع قديم يقرأ data-game بصورة خاطئة،
-                // فهذا السطر لن يزيله لكنه يوفر سلوكاً صحيحاً فوقه)
-                card.addEventListener('click', function (e) {
-                    // لو النقر على زر الـ play نفسه دعه يتصرف افتراضياً
-                    if (e.target.closest('a.play-btn')) {
-                        // نمنع تكرار التنقل لو كان هناك مستمع آخر بالخطأ:
-                        // ولكن عادة نترك الافتراضي ليعمل (أو يمكنك وضع e.stopPropagation() هنا لو أردت).
-                        return;
-                    }
-                    // خلاف ذلك — انتقل للرابط الصحيح المستخرج من الزر
-                    const href = playBtn.getAttribute('href');
-                    if (href) {
-                        // استخدام assign بدل setting location.href للحفاظ على السجل الطبيعي
-                        window.location.assign(href);
-                    }
-                });
-
-                // خيار ثانوي: إذا أردت أن تتجنّب أي تداخل مع مستمعات أخرى على الزر،
-                // أضف stopPropagation على الزر نفسه:
-                playBtn.addEventListener('click', function (e) {
-                    e.stopPropagation(); // يمنع وصول الحدث لمستمع .game-card
-                    // الافتراضي لعنصر الـ <a> سيأخذ المستخدم للرابط
-                });
-            });
-        });
-    </script>
 <script>
-  let allGames = []; // لتخزين كل الألعاب بعد تحميلها
+document.addEventListener("DOMContentLoaded", () => {
+  const grid = document.getElementById("moreGamesGrid");
+  const categoryContainer = document.querySelector(".categories");
 
   // تحميل الألعاب من ملف JSON
-  fetch('games.json')
+  fetch("games.json")
     .then(response => response.json())
     .then(data => {
-      allGames = data;
-      renderGames(allGames); // عرض كل الألعاب أولاً
+      window.allGames = data; // نخزنها عالميًا لتسهيل الفلترة
+      displayGames(data);
     })
-    .catch(error => console.error('Error loading games:', error));
+    .catch(error => console.error("Error loading games:", error));
 
-  // دالة عرض الألعاب في الصفحة
-  function renderGames(games) {
-    const container = document.getElementById('moreGamesGrid');
-    container.innerHTML = ''; // تنظيف المحتوى قبل إعادة العرض
-
+  // دالة لعرض الألعاب في الصفحة
+  function displayGames(games) {
+    grid.innerHTML = "";
     games.forEach(game => {
-      let shortDesc = game.description.length > 100 
-        ? game.description.substring(0, 100) + "..." 
+      // تقصير الوصف
+      const shortDesc = game.description.length > 120
+        ? game.description.substring(0, 120) + "..."
         : game.description;
 
-      const gameUrl = `https://tikmob.github.io/game/game.html?game=${game.id}`;
+      // توليد البطاقة
+      const card = document.createElement("div");
+      card.classList.add("game-card");
+      card.setAttribute("data-game", game.title);
+      card.setAttribute("data-category", Array.isArray(game.genre) ? game.genre.join(" ").toLowerCase() : game.genre.toLowerCase());
 
-      const card = document.createElement('div');
-      card.className = 'game-card';
-      card.setAttribute('data-category', game.genre || '');
       card.innerHTML = `
         <img src="${game.thumbnail}" alt="${game.title}" class="game-image">
         <div class="game-info">
           <h3 class="game-title">${game.title}</h3>
           <p class="game-description">${shortDesc}</p>
-          <a href="${gameUrl}" class="play-btn">Play Now</a>
+          <a href="game/game.html?game=${game.id}" class="play-btn">Play Now</a>
         </div>
       `;
-      container.appendChild(card);
+      grid.appendChild(card);
     });
   }
 
-  // عند الضغط على أي زر تصنيف
-  document.addEventListener('click', function(e) {
-    if (e.target.classList.contains('category')) {
-      const category = e.target.dataset.category;
-      if (category === 'all') {
-        renderGames(allGames);
-      } else {
-        const filtered = allGames.filter(game => 
-          game.genre && game.genre.toLowerCase().includes(category.toLowerCase())
-        );
-        renderGames(filtered);
-      }
+  // عند الضغط على تصنيف
+  categoryContainer.addEventListener("click", (e) => {
+    if (e.target.classList.contains("category")) {
+      document.querySelectorAll(".category").forEach(btn => btn.classList.remove("active"));
+      e.target.classList.add("active");
+
+      const category = e.target.dataset.category.toLowerCase();
+
+      const filtered = category === "all"
+        ? window.allGames
+        : window.allGames.filter(game => {
+            if (Array.isArray(game.genre)) {
+              return game.genre.some(g => g.toLowerCase().includes(category));
+            } else {
+              return game.genre.toLowerCase().includes(category);
+            }
+          });
+
+      displayGames(filtered);
     }
   });
+});
 </script>
+
 </body>
 </html>
