--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
     <!-- Cloaker Button -->
     <button class="cloaker-btn" id="cloakerBtn">Cloak Site</button>
 
-   script>
+   <script>
 document.addEventListener("DOMContentLoaded", () => {
   const grid = document.getElementById("moreGamesGrid");
   const categoryContainer = document.querySelector(".categories");
