--- a/index.html
+++ b/index.html
@@ -539,63 +539,58 @@
     <button class="cloaker-btn" id="cloakerBtn">Cloak Site</button>
 
    <script>
-document.addEventListener("DOMContentLoaded", () => {
-  const grid = document.getElementById("moreGamesGrid");
-  const categoryContainer = document.querySelector(".categories");
+  let allGames = []; // لتخزين كل الألعاب بعد تحميلها
 
-  fetch("games.json")
+  // تحميل الألعاب من ملف JSON
+  fetch('games.json')
     .then(response => response.json())
     .then(data => {
-      window.allGames = data;
-      displayGames(data);
+      allGames = data;
+      renderGames(allGames); // عرض كل الألعاب أولاً
     })
-    .catch(error => console.error("Error loading games:", error));
+    .catch(error => console.error('Error loading games:', error));
 
-  function displayGames(games) {
-    grid.innerHTML = "";
+  // دالة عرض الألعاب في الصفحة
+  function renderGames(games) {
+    const container = document.getElementById('moreGamesGrid');
+    container.innerHTML = ''; // تنظيف المحتوى قبل إعادة العرض
+
     games.forEach(game => {
-      const shortDesc = game.description.length > 120
-        ? game.description.substring(0, 120) + "..."
+      let shortDesc = game.description.length > 100 
+        ? game.description.substring(0, 100) + "..." 
         : game.description;
 
-      const card = document.createElement("div");
-      card.classList.add("game-card");
-      card.setAttribute("data-game", game.title);
-      card.setAttribute("data-category", Array.isArray(game.genre) ? game.genre.join(" ").toLowerCase() : game.genre.toLowerCase());
+      const gameUrl = `https://tikmob.github.io/game/game.html?game=${game.id}`;
 
+      const card = document.createElement('div');
+      card.className = 'game-card';
+      card.setAttribute('data-category', game.genre || '');
       card.innerHTML = `
         <img src="${game.thumbnail}" alt="${game.title}" class="game-image">
         <div class="game-info">
           <h3 class="game-title">${game.title}</h3>
           <p class="game-description">${shortDesc}</p>
-          <a href="game/game.html?game=${game.id}" class="play-btn">Play Now</a>
+          <a href="${gameUrl}" class="play-btn">Play Now</a>
         </div>
       `;
-      grid.appendChild(card);
+      container.appendChild(card);
     });
   }
 
-  categoryContainer.addEventListener("click", (e) => {
-    if (e.target.classList.contains("category")) {
-      document.querySelectorAll(".category").forEach(btn => btn.classList.remove("active"));
-      e.target.classList.add("active");
-
-      const category = e.target.dataset.category.toLowerCase();
-
-      const filtered = category === "all"
-        ? window.allGames
-        : window.allGames.filter(game => {
-            if (Array.isArray(game.genre)) {
-              return game.genre.some(g => g.toLowerCase().includes(category));
-            } else {
-              return game.genre.toLowerCase().includes(category);
-            }
-          });
-
-      displayGames(filtered);
+  // عند الضغط على أي زر تصنيف
+  document.addEventListener('click', function(e) {
+    if (e.target.classList.contains('category')) {
+      const category = e.target.dataset.category;
+      if (category === 'all') {
+        renderGames(allGames);
+      } else {
+        const filtered = allGames.filter(game => 
+          game.genre && game.genre.toLowerCase().includes(category.toLowerCase())
+        );
+        renderGames(filtered);
+      }
     }
   });
-});
 </script>
 </body>
 </html>
