--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
             }
 
             .games-grid {
-                grid-template-columns: 1fr;
+                grid-template-columns: repeat(2, 1fr);
             }
 
             .feature-card {
