--- a/index.html
+++ b/index.html
@@ -17,6 +17,33 @@
     <title>FreePlayHub - Best Unblocked Games Online | Free Games to Play</title>
     <link rel="canonical" href="https://ug17.github.io">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <!-- Structured Data for Website -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "FreePlayHub - Best Unblocked Games Online",
+  "url": "https://ug17.github.io",
+  "description": "Play the best unblocked games for free. Subway Surfers, Geometry Dash, Cookie Clicker and many more exciting games.",
+  "potentialAction": {
+    "@type": "SearchAction",
+    "target": "https://ug17.github.io/search?q={search_term_string}",
+    "query-input": "required name=search_term_string"
+  }
+}
+</script>
+
+<!-- Structured Data for Organization -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "FreePlayHub",
+  "url": "https://ug17.github.io",
+  "logo": "https://ug17.github.io/images/og-image.jpg",
+  "description": "Your ultimate destination for the best unblocked games online"
+}
+</script>
     <style>
         :root {
             --primary: #6c5ce7;
@@ -426,6 +453,26 @@
 }
 
     </style>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [
+    {
+      "@type": "ListItem",
+      "position": 1,
+      "name": "Home",
+      "item": "https://ug17.github.io"
+    },
+    {
+      "@type": "ListItem",
+      "position": 2,
+      "name": "Games",
+      "item": "https://ug17.github.io/games.html"
+    }
+  ]
+}
+</script>
 </head>
 <body>
     <!-- Header -->
