--- a/index.html
+++ b/index.html
@@ -473,6 +473,51 @@
   ]
 }
 </script>
+<!-- Structured Data for Games Collection -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "ItemList",
+  "name": "FreePlayHub Games Collection",
+  "description": "Collection of the best unblocked games online",
+  "numberOfItems": 20,
+  "itemListElement": [
+    {
+      "@type": "ListItem",
+      "position": 1,
+      "item": {
+        "@type": "VideoGame",
+        "name": "Subway Surfers",
+        "url": "https://tikmob.github.io/game/game.html?game=subway-surfers",
+        "genre": "Action, Arcade",
+        "playMode": "Browser"
+      }
+    },
+    {
+      "@type": "ListItem",
+      "position": 2,
+      "item": {
+        "@type": "VideoGame", 
+        "name": "Geometry Dash",
+        "url": "https://tikmob.github.io/game/game.html?game=geometry-dash",
+        "genre": "Music, Platform",
+        "playMode": "Browser"
+      }
+    },
+    {
+      "@type": "ListItem", 
+      "position": 3,
+      "item": {
+        "@type": "VideoGame",
+        "name": "Cookie Clicker",
+        "url": "https://tikmob.github.io/game/game.html?game=cookie-clicker", 
+        "genre": "Incremental, Casual",
+        "playMode": "Browser"
+      }
+    }
+  ]
+}
+</script>
 </head>
 <body>
     <!-- Header -->
